2003-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* tui-out.c (tui_ui_out_impl): Add NULL for redirect member.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	* tui-hooks.c: Update include order.
	* tui.c: Likewise.
	* tuiCommand.c: Likewise.
	* tuiData.c: Likewise.
	* tuiDataWin.c: Likewise.
	* tuiDisassem.c: Likewise.
	* tuiGeneralWin.c: Likewise.
	* tuiIO.c: Likewise.
	* tuiLayout.c: Likewise.
	* tuiRegs.c: Likewise.
	* tuiSource.c: Likewise.
	* tuiSourceWin.c: Likewise.
	* tuiStack.c: Likewise.
	* tuiWin.c: Likewise.

2003-06-12  Andreas Schwab  <schwab@suse.de>

	* tuiSource.c (tuiVerticalSourceScroll): Use get_frame_pc.
	* tuiSourceWin.c (tuiHorizontalSourceScroll): Likewise.
	* tuiStack.c (tui_get_function_from_frame): Likewise.
	(tuiShowFrameInfo): Likewise.
	* tuiWin.c (_makeVisibleWithNewHeight): Likewise.
	* tui-hooks.c (tui_selected_frame_level_changed_hook): Likewise.
	* tuiDisassem.c (tuiVerticalDisassemScroll): Likewise.
	Include "disasm.h".

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* tuiRegs.c: Use MAX_REGISTER_SIZE instead of
	MAX_REGISTER_RAW_SIZE.

2003-05-03  Andrew Cagney  <cagney@redhat.com>

	* tuiDisassem.c (tui_disassemble): Call gdb_print_insn, instead of
	TARGET_PRINT_INSN.  Do not initialize a disassemble_info object.

2003-04-30  Andrew Cagney  <cagney@redhat.com>

	* tuiDisassem.c (tui_disassemble): Use
	"deprecated_tm_print_insn_info" instead of TARGET_PRINT_INSN_INFO,
	add comment.

2003-03-14  Andrew Cagney  <cagney@redhat.com>

	* tuiRegs.c (_tuiGetRegisterRawValue): Use frame_read_register,
	instead of get_saved_register.

2003-03-13  Stephane Carrez  <stcarrez@nerim.fr>

	* tui-out.c (tui_out_data): Fix typedef.

2003-03-08  Andrew Cagney  <cagney@redhat.com>

	* tui-out.c: Update copyright.
	(tui_out_data): Define typedef.  Use instead of ui_out_data.

2003-02-14  Andrew Cagney  <ac131313@redhat.com>

	* tui.c (tui_enable, tui_disable): Don't modify tui_version.