@@ -1,3 +1,10 @@
+2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* tui-interp.c (tui_resume): Enable tui when we expected it.
+	(tui_suspend): Remember in which TUI mode we are.
+	(_initialize_tui_interp): Use the tui interpreter even when no
+	other interpreter was set and define in which TUI mode to start.
+
 2003-07-02  Daniel Jacobowitz  <drow@mvista.com>
 
 	* tui-out.c (tui_ui_out_impl): Add NULL for redirect member.
